updated macos conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,6 @@
 set-environment -g TMUX_PLUGIN_MANAGER_PATH $XDG_CONFIG_HOME/tmux/plugins/
 
+# Base16 Gruvbox
 base00="#1d2021" # ----
 base01="#3c3836" # ---
 base02="#504945" # --
@@ -23,6 +24,7 @@ color_session_text="$base0C"
 color_status_text="$base0D"
 color_main="$base0D"
 color_secondary="$base0E"
+color_ternary="$base0A"
 color_level_ok="$base0B"
 color_level_warn="$base09"
 color_level_stress="$base08"
@@ -51,19 +53,53 @@ separator_powerline_left=""
 separator_powerline_right=""
 setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[default] #I:#W# #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
 
-# set -g status-justify centre # center align window list
-# set -g status-left-length 20
-# set -g status-right-length 140
-# set -g status-left '#[fg=green]#H#[fg=white] • #[fg=yellow]#(whoami)#[default]'
-# if-shell '[ $(uname -s) = "Darwin" ]' \
-#    "set -g status-right '#[fg=green,bg=default]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2) #[fg=black]• #[fg=red,dim,bg=default]#(guptime |cut -f6 -d\" \" |cut -f1 -d,) #[fg=black]• #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'" \
-#    "set -g status-right '#[fg=green,bg=default]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2)#[fg=white] • #[fg=yellow,bg=default]#(uptime |perl -pe \"s/.*up\\s+([^,]*).*/up \\1/\")#[fg=white] • #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'"
+# Configure tmux-battery widget colors
+set -g @batt_color_full_charge "#[fg=$color_level_ok]"
+set -g @batt_color_high_charge "#[fg=$color_level_ok]"
+set -g @batt_color_medium_charge "#[fg=$color_level_warn]"
+set -g @batt_color_low_charge "#[fg=$color_level_stress]"
 
-# Set parent terminal title to reflect current window in tmux session
-set -g set-titles on
-set -g set-titles-string "#I:#W"
+# Configure tmux-prefix-highlight colors
+set -g @prefix_highlight_output_prefix ' '
+set -g @prefix_highlight_output_suffix ' '
+set -g @prefix_highlight_fg "$color_dark"
+set -g @prefix_highlight_bg "$color_main"
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_show_sync_mode 'on'
+# set -g @prefix_highlight_prefix_prompt 'P'
+set -g @prefix_highlight_copy_prompt 'Copy'
+set -g @prefix_highlight_sync_prompt 'Sync'
+set -g @prefix_highlight_copy_mode_attr "fg=$color_dark,bg=$color_main"
+set -g @prefix_highlight_sync_mode_attr "fg=$color_dark,bg=$color_main"
 
-# Status bar on top
+# online and offline icon for tmux-online-status
+set -g @online_icon "#[fg=$color_level_ok] ﯱ #[default]"
+set -g @offline_icon "#[fg=$color_level_stress]  #[default]"
+
+# Configure view templates for tmux-plugin-sysstat "MEM" and "CPU" widget
+set -g @sysstat_mem_view_tmpl 'MEM:#[fg=#{mem.color}]#{mem.pused}#[default] #{mem.used}'
+
+# Configure colors for tmux-plugin-sysstat "MEM" and "CPU" widget
+set -g @sysstat_cpu_color_low "$color_level_ok"
+set -g @sysstat_cpu_color_medium "$color_level_warn"
+set -g @sysstat_cpu_color_stress "$color_level_stress"
+
+set -g @sysstat_mem_color_low "$color_level_ok"
+set -g @sysstat_mem_color_medium "$color_level_warn"
+set -g @sysstat_mem_color_stress "$color_level_stress"
+
+set -g @sysstat_swap_color_low "$color_level_ok"
+set -g @sysstat_swap_color_medium "$color_level_warn"
+set -g @sysstat_swap_color_stress "$color_level_stress"
+
+my_session="#[fg=$color_session_text] #S ➜ #[default]"
+my_user_host="#[fg=$color_secondary]#(whoami)#[default]@#H"
+my_date="#[fg=$color_secondary]%h %d %H:%M#[default]"
+my_battery="#{battery_status_fg} #{battery_icon} #{battery_percentage}"
+my_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag, Z ,}#[default]"
+my_is_keys_off="#[fg=$color_dark,bg=$color_light]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
+set -g status-left "$my_session"
+set -g status-right "#{prefix_highlight}$my_is_keys_off$my_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $my_user_host | $my_date $my_battery #{online_status}"
 
 # C-b is not acceptable -- Vim uses it
 unbind C-b
@@ -104,18 +140,25 @@ set -g visual-activity on
 
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
+set -g allow-rename off
+
 # auto window rename
-set-window-option -g automatic-rename
+# set-window-option -g automatic-rename
 
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # enable truecolor support
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-256color"
+
 set-option -sa terminal-overrides ',alacritty:RGB'
 set-option -sa terminal-overrides ',alacritty:Tc'
 set-option -g default-shell /bin/zsh
 set-option -g focus-events on
+
+# Ms modifies OSC 52 clipboard handling to work with mosh, see
+# https://gist.github.com/yudai/95b20e3da66df1b066531997f982b57b
+set -ag terminal-overrides "vte*:XT:Ms=\\E]52;c;%p2%s\\7,xterm*:XT:Ms=\\E]52;c;%p2%s\\7"
 
 # border colours
 # set -g pane-border-style fg=white
@@ -209,11 +252,15 @@ set -g @gopass-pane-percentage 20
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'haru-ake/tmux-gopass'
 set -g @plugin 'wfxr/tmux-fzf-url'
