--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,92 +1,34 @@
-set-environment -g TMUX_PLUGIN_MANAGER_PATH $XDG_CONFIG_HOME/tmux/plugins/
-
-base00="#1d2021" # ----
-base01="#3c3836" # ---
-base02="#504945" # --
-base03="#665c54" # -
-base04="#bdae93" # +
-base05="#d5c4a1" # ++
-base06="#ebdbb2" # +++
-base07="#fbf1c7" # ++++
-base08="#fb4934" # red
-base09="#fe8019" # orange
-base0A="#fabd2f" # yellow
-base0B="#b8bb26" # green
-base0C="#8ec07c" # aqua/cyan
-base0D="#83a598" # blue
-base0E="#d3869b" # purple
-base0F="#d65d0e" # brown
-
-color_dark="$base01"
-color_light="$base05"
-color_session_text="$base0C"
-color_status_text="$base0D"
-color_main="$base0D"
-color_secondary="$base0E"
-color_level_ok="$base0B"
-color_level_warn="$base09"
-color_level_stress="$base08"
-color_status_text_off="$base05"
-color_window_off_indicator="$base06"
-color_window_off_status_bg="$base03"
-color_window_off_status_current_bg="$base04"
-
 set -g status on
 set -g status-interval 5
 set -g status-position top
 set -g status-justify left
 set -g status-right-length 100
 
-set -g mode-style "fg=$color_dark,bold,bg=$color_level_stress"
-set -g status-style "fg=$color_main,bg=$color_dark"
-set -g message-style "fg=$color_dark,bold,bg=$color_level_warn"
+set -g mode-style "fg=black,bold,bg=red"
+set -g status-style "fg=blue,bg=black"
+set -g message-style "fg=black,bold,bg=orange"
 setw -g window-status-format " #I:#W "
-setw -g window-status-style "fg=$color_main"
-setw -g window-status-activity-style "fg=$color_level_warn"
-setw -g pane-active-border-style "fg=$color_light"
-setw -g pane-border-style "fg=$color_level_warn"
-setw -g window-status-current-style "fg=$color_dark,bold,bg=$color_main"
+setw -g window-status-style "fg=blue"
+setw -g window-status-activity-style "fg=orange"
+setw -g pane-active-border-style "fg=red"
+setw -g pane-border-style "fg=gray"
+setw -g window-status-current-style "fg=black,bold,bg=blue"
 set -g window-status-separator ""
-separator_powerline_left=""
-separator_powerline_right=""
-setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[default] #I:#W# #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
+separator_powerline_left=" "
+separator_powerline_right=" "
+setw -g window-status-current-format "#[fg=blue,bg=black]$separator_powerline_left#[default] #I:#W# #[fg=blue,bg=black]$separator_powerline_right#[default]"
+#
+my_session=
+my_user_host="#[fg=green]#(whoami)#[default]@#H"
+my_date="#[fg=green]%h %d %H:%M#[default]"
+my_battery="#{battery_status_fg} #{battery_icon} #{battery_percentage}"
+my_is_zoomed="#[fg=black,bg=blue]#{?window_zoomed_flag, Z ,}#[default]"
+my_is_keys_off="#[fg=black,bg=grey]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
 
-# set -g status-justify centre # center align window list
-# set -g status-left-length 20
-# set -g status-right-length 140
-# set -g status-left '#[fg=green]#H#[fg=white] • #[fg=yellow]#(whoami)#[default]'
-# if-shell '[ $(uname -s) = "Darwin" ]' \
-#    "set -g status-right '#[fg=green,bg=default]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2) #[fg=black]• #[fg=red,dim,bg=default]#(guptime |cut -f6 -d\" \" |cut -f1 -d,) #[fg=black]• #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'" \
-#    "set -g status-right '#[fg=green,bg=default]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2)#[fg=white] • #[fg=yellow,bg=default]#(uptime |perl -pe \"s/.*up\\s+([^,]*).*/up \\1/\")#[fg=white] • #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'"
-
-# Set parent terminal title to reflect current window in tmux session
-set -g set-titles on
-set -g set-titles-string "#I:#W"
-
-# Status bar on top
-
-# C-b is not acceptable -- Vim uses it
-unbind C-b
-set-option -g prefix C-a
-# bind-key C-a last-window
-# bind-key \# last-pane
-
-# Start numbering at 1
-set -g base-index 1
-setw -g pane-base-index 1
-
+set -g status-left "$my_session"
+#
 # Renumber windows auto
 set -g renumber-windows on
-
-# Escape time
-set-option -sg escape-time 0
-
-# than constraining window size to the maximum size of any client
-# connected to the *session*, constrain window size to the maximum size of any
-# client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
-
-set-option -g history-limit 100000
 
 # Allows us to use C-a a <command> to send commands to a TMUX session inside
 # another TMUX session
@@ -94,32 +36,29 @@ bind-key a send-prefix
 
 # Activity monitoring
 setw -g monitor-activity on
-set -g visual-activity on
-
-# hjkl pane traversal
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
+set -g remain-on-exit off
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence on
 
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
-# auto window rename
-set-window-option -g automatic-rename
+set -g allow-rename off
 
 # reload config
 bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded..."
 
-# enable truecolor support
-set-option -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',alacritty:RGB'
 set-option -sa terminal-overrides ',alacritty:Tc'
-#set-option -g default-shell /bin/zsh
 set-option -g focus-events on
 
+# Ms modifies OSC 52 clipboard handling to work with mosh, see
+# https://gist.github.com/yudai/95b20e3da66df1b066531997f982b57b
+set -ag terminal-overrides "vte*:XT:Ms=\\E]52;c;%p2%s\\7,xterm*:XT:Ms=\\E]52;c;%p2%s\\7"
+
 # border colours
-# set -g pane-border-style fg=white
-# set -g pane-active-border-style "bg=default fg=blue"
+set -g pane-border-style fg=white
+set -g pane-active-border-style "bg=default fg=blue"
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
@@ -181,10 +120,10 @@ if-shell 'test -n "$SSH_CLIENT"' \
 bind -T root F12  \
     set prefix None \;\
     set key-table off \;\
-    set status-style "fg=$color_status_text_off,bg=$color_window_off_status_bg" \;\
-    setw -g window-status-style "fg=$color_status_text_off" \;\
-    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[default] #I:#W# #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
-    set window-status-current-style "fg=$color_dark,bold,bg=$color_window_off_status_current_bg" \;\
+    set status-style "fg=white,bg=black" \;\
+    setw -g window-status-style "fg=white" \;\
+    set window-status-current-format "#[fg=white,bg=black]$separator_powerline_left#[default] #I:#W# #[fg=white,bg=black]$separator_powerline_right#[default]" \;\
+    set window-status-current-style "fg=black,bold,bg=white" \;\
     if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
     refresh-client -S \;\
 
