--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,7 +41,7 @@ set -g visual-activity off
 set -g visual-bell off
 set -g visual-silence on
 
-bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
+# bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
 set -g allow-rename off
 
