--- a/sway/waybar/config
+++ b/sway/waybar/config
@@ -11,12 +11,12 @@
     // Global configuration
     // -------------------------------------------------------------------------
 
-    "layer": "top",
+    "layer": "bottom",
 
     "position": "top",
 
     // If height property would be not present, it'd be calculated dynamically
-    "height": 30,
+    "height": 32,
 
     "modules-left": [
         "sway/workspaces",
@@ -31,8 +31,8 @@
         "cpu",
         "temperature",
         "custom/keyboard-layout",
-        "battery",
         "backlight",
+        "battery",
         "tray",
         "idle_inhibitor",
         "pulseaudio",
@@ -40,21 +40,19 @@
         "clock#time"
     ],
 
-
     // -------------------------------------------------------------------------
     // Modules
     // -------------------------------------------------------------------------
+
     "backlight": {
-        "device": "intel_backlight",
-        "format": "{percent}%  <span font='16'>{icon}</span>",
-        "format-icons": ["", "", ""],
-        "on-scroll-up": "brightnessctl set 2%-",
-        "on-scroll-down": "brightnessctl set 2%+"
+        "format": "{icon}  {percent}%",
+        "format-icons": ["", "", "", "", "", "", "", "", ""]
     },
+
     "battery": {
         "interval": 10,
         "states": {
-            "warning": 30,
+            "warning": 25,
             "critical": 15
         },
         // Connected to AC
@@ -62,11 +60,11 @@
         // Not connected to AC
         "format-discharging": "{icon}  {capacity}%",
         "format-icons": [
-            "", // Icon: battery-full
-            "", // Icon: battery-three-quarters
+            "", // Icon: battery-full
+            "", // Icon: battery-three-quarters
             "", // Icon: battery-half
-            "", // Icon: battery-quarter
-            ""  // Icon: battery-empty
+            "", // Icon: battery-quarter
+            ""  // Icon: battery-empty
         ],
         "tooltip": true
     },
@@ -79,7 +77,7 @@
 
     "clock#date": {
       "interval": 10,
-      "format": "  {:%d/%m/%y}", // Icon: calendar-alt
+      "format": "   {:%d/%m/%y}", // Icon: calendar-alt
       "tooltip-format": "{:%A %e %B %Y}"
     },
 
@@ -89,22 +87,33 @@
         "states": {
           "warning": 70,
           "critical": 90
-        }
+        },
     },
 
     "custom/keyboard-layout": {
-      "exec": "swaymsg -t get_inputs | grep -m1 'xkb_active_layout_name' | cut -d '\"' -f4",
+      "exec": "swaymsg -t get_inputs | grep -m1 'xkb_active_layout_name' | cut -d '\"' -f4 | cut -d ' ' -f1",
       // Interval set only as a fallback, as the value is updated by signal
-      "interval": 30,
-      "format": "  {}", // Icon: keyboard
+      "interval": 10,
+      "format": "   {}", // Icon: keyboard
       // Signal sent by Sway key binding (~/.config/sway/key-bindings)
       "signal": 1, // SIGHUP
-      "tooltip": false
+      "tooltip": false,
+      "on-click": "swaymsg input type:keyboard xkb_switch_layout next",
+      "on-scroll-up": "swaymsg input type:keyboard xkb_switch_layout next",
+      "on-scroll-down": "swaymsg input type:keyboard xkb_switch_layout prev",
+    },
+
+    "idle_inhibitor": {
+        "format": "{icon}",
+        "format-icons": {
+            "activated": " ",
+            "deactivated": " ",
+        },
     },
 
     "memory": {
-        "interval": 5,
-        "format": "<span font='16'></span>  {}%", // Icon: memory
+        "interval": 3,
+        "format": "󰟜  {}%", // Icon: memory
         "states": {
             "warning": 70,
             "critical": 90
@@ -113,21 +122,39 @@
 
     "network": {
         "on-click": "networkmanager_dmenu",
-        "interval": 5,
-        "format-wifi": "  {essid} ({signalStrength}%)", // Icon: wifi
-        "format-ethernet": "  {ipaddr}/{cidr}", // Icon: ethernet
-        "format-disconnected": "⚠  Disconnected",
-        "tooltip-format": "{ifname}: {ipaddr}"
+        "interval": 3,
+        "format-wifi": "   {essid}", // Icon: wifi
+        "format-ethernet": "  {ifname}: {ipaddr}/{cidr}", // Icon: ethernet
+        "format-disconnected": "⚠   Disconnected",
+        "tooltip-format": "{ifname}: {ipaddr} (signal: {signalStrength}%)"
+    },
+
+    "pulseaudio": {
+        "scroll-step": 2,
+        "format": "{icon}  {volume}%",
+        "format-muted": "",
+        "format-icons": {
+            "headphones": "", // Icon: headphones
+            "handsfree": "", // Icon: headset
+            "headset": "", // Icon: headset
+            "phone": "", // Icon: phone
+            "portable": "", // Icon: phone
+            "car": "", // Icon: car
+            "default": ["", ""] // Icons: volume-down, volume-up
+        },
+        "on-click": "wpclt set-mute @DEFAULT_AUDIO_SINK@ toggle",
+        "on-click-right": "pavucontrol",
+        "tooltip": true
     },
 
     "sway/mode": {
-        "format": "<span style=\"italic\">  {}</span>", // Icon: expand-arrows-alt
+        "format": "<span style=\"italic\"> {}</span>", // Icon: expand-arrows-alt
         "tooltip": false
     },
 
     "sway/window": {
         "format": "{}",
-        "max-length": 120
+        "max-length": 50
     },
 
     "sway/workspaces": {
@@ -135,36 +162,21 @@
         "disable-scroll": true,
         "format": "{icon} {name}",
         "format-icons": {
-            "1:www": "龜", // Icon: firefox-browser
-            "2:mail": "", // Icon: mail
-            "3:editor": "", // Icon: code
-            "4:terminals": "", // Icon: terminal
-            "5:portal": "", // Icon: terminal
+            "1:WWW": "", // Icon: firefox-browser
+            "2:Editor": "", // Icon: code
+            "3:Terminals": "", // Icon: terminal
+            "4:Mail": "", // Icon: mail
+            "8:Documents": "", // Icon: book
+            "9:Multimedia": "", // Icon: music
+            "10:Torrent": "", // Icon: cloud-download-alt
             "urgent": "",
             "focused": "",
             "default": ""
         }
     },
 
-    "pulseaudio": {
-        "scroll-step": 1,
-        "format": "{icon}  {volume}%",
-        "format-bluetooth": "{icon}  {volume}%",
-        "format-muted": "",
-        "format-icons": {
-            "headphones": "",
-            "handsfree": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", ""]
-        },
-        "on-click": "pavucontrol"
-    },
-
     "temperature": {
-      "critical-threshold": 80,
+      "critical-threshold": 75,
       "interval": 5,
       "format": "{icon}  {temperatureC}°C",
       "format-icons": [
@@ -177,16 +189,9 @@
       "tooltip": true
     },
 
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": "",
-            "deactivated": ""
-        }
-    },
-
     "tray": {
         "icon-size": 21,
         "spacing": 10
     }
+
 }
