--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,8 @@ on:
       - main
   pull_request:
   workflow_dispatch:
+env:
+  SSH_AUTH_SOCK: /tmp/ssh_agent.sock
 jobs:
   builds:
     name: Build on ${{ matrix.system }}
@@ -33,5 +35,15 @@ jobs:
         with:
           name: icyd
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+      - name: Setup SSH agent
+        env:
+          SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        run: |
+          ssh-agent -a "$SSH_AUTH_SOCK" >/dev/null
+          echo "echo $SSH_PASSPHRASE" > ~/.ssh_askpass
+          chmod +x ~/.ssh_askpass
+          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | \
+            DISPLAY=None SSH_ASKPASS=~/.ssh_askpass ssh-add >/dev/null
       - name: Build system configuration
         run: nix flake check
