--- a/.github/workflows/update-flakes.yml
+++ b/.github/workflows/update-flakes.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "0 0 * * 0"
+env:
+  SSH_AUTH_SOCK: /tmp/ssh_agent.sock
 jobs:
   lockfile:
     runs-on: ubuntu-latest
@@ -19,6 +21,16 @@ jobs:
             dependencies
             automated
             merge-queue
+      - name: Setup SSH agent
+        env:
+          SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        run: |
+          ssh-agent -a "$SSH_AUTH_SOCK" >/dev/null
+          echo "echo $SSH_PASSPHRASE" > ~/.ssh_askpass
+          chmod +x ~/.ssh_askpass
+          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | \
+            DISPLAY=None SSH_ASKPASS=~/.ssh_askpass ssh-add >/dev/null
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@v27
         with:
