--- a/.github/workflows/update-flakes.yml
+++ b/.github/workflows/update-flakes.yml
@@ -4,8 +4,6 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "0 0 * * 0"
-env:
-  SSH_AUTH_SOCK: /tmp/ssh_agent.sock
 jobs:
   lockfile:
     runs-on: ubuntu-latest
@@ -21,16 +19,9 @@ jobs:
             dependencies
             automated
             merge-queue
-      - name: Setup SSH agent
-        env:
-          SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        run: |
-          ssh-agent -a "$SSH_AUTH_SOCK" >/dev/null
-          echo "echo $SSH_PASSPHRASE" > ~/.ssh_askpass
-          chmod +x ~/.ssh_askpass
-          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | \
-            DISPLAY=None SSH_ASKPASS=~/.ssh_askpass ssh-add >/dev/null
+      - uses: webfactory/ssh-agent@v0.9.1
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@v27
         with:
