--- a/.github/workflows/update-flakes.yml
+++ b/.github/workflows/update-flakes.yml
@@ -13,15 +13,15 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - uses: cachix/install-nix-action@v31
-      - name: Update dev flake.lock
-        uses: DeterminateSystems/update-flake-lock@v27
-        with:
-          path-to-flake-dir: modules/meta/_dev
-          pr-title: Update nix flake dev inputs
-          pr-labels: |
-            dependencies
-            automated
-            merge-queue
+      # - name: Update dev flake.lock
+      #   uses: DeterminateSystems/update-flake-lock@v27
+      #   with:
+      #     path-to-flake-dir: modules/meta/_dev
+      #     pr-title: Update nix flake dev inputs
+      #     pr-labels: |
+      #       dependencies
+      #       automated
+      #       merge-queue
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@v27
         with:
