--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         uses: DeterminateSystems/flake-checker-action@v12
       - uses: cachix/install-nix-action@v31
         with:
-          extra_nix_config = "experimental-features = flakes nix-command pipe-operators"
+          extra_nix_config: "experimental-features = flakes nix-command pipe-operators"
       - uses: cachix/cachix-action@v16
         with:
           name: icyd
