ci: add step to trust ssh host

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,13 @@ jobs:
             os: macos-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: webfactory/ssh-agent@v0.9.0
+      - name: "SSH: configure agent"
+        uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: "SSH: trust host"
+        run: |
+          ssh-keyscan -H gitlab.com >> ~/.ssh/known_hosts
       - name: Check nix flake inputs
         uses: DeterminateSystems/flake-checker-action@v12
       - uses: cachix/install-nix-action@v31
