--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,4 +39,9 @@ jobs:
           name: icyd
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - name: Build system configuration
-        run: nix flake check
+        run: |
+          if [ "${{ matrix.system }}" = "x86_64-linux" ]; then
+            nix build .#nixosConfigurations.legionix5.config.system.build.toplevel
+          elif [ "${{ matrix.system }}" = "x86_64-linux" ]; then
+            nix build .#darwinConfigurations.ES-IT00385.config.system.build.toplevel
+          fi
