--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
           name: icyd
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - name: Flake check
-        run: nix flake check --no-build
+        run: nix flake check
       - name: Build system configuration
         run: |
           if [ "${{ matrix.system }}" = "x86_64-linux" ]; then
