--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,19 +22,30 @@ jobs:
             os: macos-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Check nix flake dev inputs
-        uses: DeterminateSystems/flake-checker-action@v12
+      - name: "SSH: configure agent"
+        uses: webfactory/ssh-agent@v0.9.0
         with:
-          flake-lock-path: modules/meta/_dev/flake.lock
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: "SSH: trust host"
+        run: |
+          ssh-keyscan -H gitlab.com >> ~/.ssh/known_hosts
       - name: Check nix flake inputs
         uses: DeterminateSystems/flake-checker-action@v12
       - uses: cachix/install-nix-action@v31
+        with:
+          extra_nix_config: "experimental-features = flakes nix-command pipe-operators"
       - uses: cachix/cachix-action@v16
         with:
           name: icyd
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-      - uses: webfactory/ssh-agent@v0.9.1
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: Build system configuration
+      - name: Flake check
         run: nix flake check
+      - name: Build system configuration
+        run: |
+          if [ "${{ matrix.system }}" = "x86_64-linux" ]; then
+            nix build .#check.${{ matrix.system }}."host/legionix5"
+            nix build .#check.${{ matrix.system }}."user/beto"
+          elif [ "${{ matrix.system }}" = "aarch64-darwin" ]; then
+            nix build .#check.${{ matrix.system }}."host/ES-IT00385"
+            nix build .#check.${{ matrix.system }}."user/aj.vazquez"
+          fi
