--- a/.github/workflows/update-flakes.yml
+++ b/.github/workflows/update-flakes.yml
@@ -9,6 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: "SSH: configure agent"
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: "SSH: trust host"
+        run: |
+          ssh-keyscan -H gitlab.com >> ~/.ssh/known_hosts
       - uses: cachix/install-nix-action@v31
       - name: Update dev flake.lock
         uses: DeterminateSystems/update-flake-lock@v27
@@ -19,9 +26,6 @@ jobs:
             dependencies
             automated
             merge-queue
-      - uses: webfactory/ssh-agent@v0.9.1
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@v27
         with:
