ci: separate system and home builds

--- a/.github/workflows/build-hm.yml
+++ b/.github/workflows/build-hm.yml
@@ -1,5 +1,5 @@
 ---
-name: Build
+name: Build home configurations
 permissions:
   contents: read
 on:
@@ -21,15 +21,6 @@ jobs:
           - system: aarch64-darwin
             os: macos-latest
     steps:
-      - name: Node cleanup
-        run: |
-          df -h
-          if [ "${{ matrix.system }}" = "x86_64-linux" ]; then
-            sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
-            sudo docker image prune --all --force
-            sudo docker builder prune -a
-            df -h
-          fi
       - uses: actions/checkout@v4
       - name: "SSH: configure agent"
         uses: webfactory/ssh-agent@v0.9.1
@@ -47,22 +38,10 @@ jobs:
         with:
           name: icyd
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-      - name: Flake check
-        run: nix flake check
-      - name: Build system configuration
-        run: |
-          df -h
-          if [ "${{ matrix.system }}" = "x86_64-linux" ]; then
-            nix build .#nixosConfigurations.legionix5.config.system.build.toplevel
-          elif [ "${{ matrix.system }}" = "aarch64-darwin" ]; then
-            sed -i '' -e '/binOverride/d' modules/hosts/ES-IT00385/kmonad.nix
-            nix build .#darwinConfigurations.ES-IT00385.config.system.build.toplevel
-          fi
       - name: Build home configuration
         run: |
-          df -h
           if [ "${{ matrix.system }}" = "x86_64-linux" ]; then
-            nix build .#homeConfigurations.beto.activationPackage
+            nix build .#check.${{ matrix.system }}."user/beto"
           elif [ "${{ matrix.system }}" = "aarch64-darwin" ]; then
-            nix build .#homeConfigurations."aj.vazquez".activationPackage
+            nix build .#check.${{ matrix.system }}.\"user/aj.vazquez\"
           fi
